<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Questions Réponses</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_add_to_favorite">Cet audio a été ajouté à la liste des favoris</string>
    <string name="audio_already_add_to_favorite">Cet audio a déjà été ajouté à la liste des favoris</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="detail_no_connection">Les données mobiles sont désactivées. Connectez-vous au réseau Wi-Fi à la place ou activez les données mobiles et réessayez.</string>
    <string name="detail_no_video">Impossible de lire cette vidéo, veuillez réessayer plus tard...</string>
    <string name="email_invalidate">Adresse email non valide</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="field_requires">Ce champ est obligatoire</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="lb_audio_player_date_auteur">Veuillez patienter quelques instants...</string>
    <string name="lb_audio_player_time_end">40 min, 19 sec</string>
    <string name="lb_audio_player_time_progress">0 min, 4 sec</string>
    <string name="lb_audio_player_title">Chargement en cours...</string>
    <string name="lb_audios">AUDIOS</string>
    <string name="lb_buffering_detail">Mise en mémoire tempon...</string>
    <string name="lb_buffering_title">CHARGEMENT EN COURS...</string>
    <string name="lb_checked_all">Tout cocher</string>
    <string name="lb_contact_us">Laisser un message</string>
    <string name="lb_content_desc" />
    <string name="lb_data_delete">Suppression effectuée avec succès !</string>
    <string name="lb_data_save">Vos données ont été enregistrées avec succès !</string>
    <string name="lb_default_url" formatted="false">https://www.youtube.com/c/TV2VIEpourJ%C3%A9susChrist/videos</string>
    <string name="lb_delete_finish_quizz">Supprimer les quizz terminés</string>
    <string name="lb_delete_not_finish_quizz">Supprimer les quizz en cours</string>
    <string name="lb_delete_selection">Supprimer la sélection</string>
    <string name="lb_delete_spiritual_growth">Supprimer les croissances spirituelles</string>
    <string name="lb_dictionary">DICTIONNAIRE</string>
    <string name="lb_download_audio">TÉLÉCHARGÉS</string>
    <string name="lb_download_video">TÉLÉCHARGÉES</string>
    <string name="lb_downloading">Téléchargement...</string>
    <string name="lb_downloading_progress">Téléchargement en cours...</string>
    <string name="lb_else">AUTRES</string>
    <string name="lb_favorite">FAVORIS</string>
    <string name="lb_fermer">FERMER</string>
    <string name="lb_form_contact_us">LAISSER UN MESSAGE</string>
    <string name="lb_form_field_require">Tous les champs du formulaire sont obligatoires</string>
    <string name="lb_form_search_indication">"La saisie du mot clé ou de l'orateur est obligatoire"</string>
    <string name="lb_form_search_keyword">Mot clé ou orateur</string>
    <string name="lb_form_search_select_category">Sélectionnez une ressource</string>
    <string name="lb_form_search_title">EFFECTUER UNE RECHERCHE</string>
    <string name="lb_form_your_city">Votre ville</string>
    <string name="lb_form_your_email">Votre e-mail</string>
    <string name="lb_form_your_message">Votre message</string>
    <string name="lb_form_your_name">Votre nom</string>
    <string name="lb_historical">HISTORIQUE</string>
    <string name="lb_home">ACCUEIL</string>
    <string name="lb_impossible_toplay">LECTURE IMPOSSIBLE</string>
    <string name="lb_impossible_toplay_detail">"Le fichier audio n'a pu être lu."</string>
    <string name="lb_info_detail">"Vous avez la possibilité de télécharger des vidéos sur n'importe quelle chaîne Youtube.

Vous pouvez aussi télécharger une vidéo youtube en la partageant via cette application."</string>
    <string name="lb_info_toknow">INFORMATION À SAVOIR</string>
    <string name="lb_key_group_spiritual_growth">croissance-spirituelle</string>
    <string name="lb_key_group_to_add">quizz-is-not-finished</string>
    <string name="lb_key_word">Saisissez un mot clé</string>
    <string name="lb_level">Niveau</string>
    <string name="lb_level_difficulty_difficult">Difficile</string>
    <string name="lb_level_difficulty_easy">Facile</string>
    <string name="lb_level_difficulty_no_chrono">Sans chrono</string>
    <string name="lb_level_difficulty_normal">Normal</string>
    <string name="lb_level_difficulty_very_difficult">Très difficile</string>
    <string name="lb_level_difficulty_very_easy">Très facile</string>
    <string name="lb_level_explication">Vous devez avoir {NUMBER_ANSWER} bonnes réponses ou plus</string>
    <string name="lb_level_find_all">Vous devez trouver toutes les réponses</string>
    <string name="lb_lien_download_video">https://ws.levraievangile.org/tv2vie/youtube/download.php?v=</string>
    <string name="lb_lien_webservice">https://ws.levraievangile.org/</string>
    <string name="lb_menu">MENU</string>
    <string name="lb_menu_formulaire">Formulaire</string>
    <string name="lb_menu_quizz_end">Quiz terminés</string>
    <string name="lb_menu_quizz_level_1">Niveau 1</string>
    <string name="lb_menu_quizz_level_10">Niveau 10</string>
    <string name="lb_menu_quizz_level_2">Niveau 2</string>
    <string name="lb_menu_quizz_level_3">Niveau 3</string>
    <string name="lb_menu_quizz_level_4">Niveau 4</string>
    <string name="lb_menu_quizz_level_5">Niveau 5</string>
    <string name="lb_menu_quizz_level_6">Niveau 6</string>
    <string name="lb_menu_quizz_level_7">Niveau 7</string>
    <string name="lb_menu_quizz_level_8">Niveau 8</string>
    <string name="lb_menu_quizz_level_9">Niveau 9</string>
    <string name="lb_menu_quizz_level_difficulty">Niveaux de difficulté</string>
    <string name="lb_menu_quizz_not_end">Quiz en cours</string>
    <string name="lb_menu_sms">SMS</string>
    <string name="lb_menu_spiritual_growth">Croissance spirituelle</string>
    <string name="lb_menu_telephone">Téléphone</string>
    <string name="lb_menu_update_app">"Mettre à jour l'application"</string>
    <string name="lb_menu_whatsapp">WhatsApp</string>
    <string name="lb_message">+Votre message...</string>
    <string name="lb_minutes_chrono">{NUMBER_MINUTES} min chrono</string>
    <string name="lb_msg_confirm">Voulez-vous vraiment quitter cette application?</string>
    <string name="lb_nav_continuie">CONTINUER</string>
    <string name="lb_nav_correct">0 TROUVÉ | 0 ERREUR</string>
    <string name="lb_nav_demo_question">"A quelle église l'apôtre s'adresse t-il dans le passage ci-dessous? 
«Car la parole du Seigneur a retenti de chez vous, non seulement dans la Macédoine et dans l'Achaïe mais aussi en tous lieux, et votre foi envers Dieu est si célèbre, que nous n'avons pas besoin d'en parler.»"</string>
    <string name="lb_nav_explain">EXPLICATION</string>
    <string name="lb_nav_no">NON</string>
    <string name="lb_nav_progress">0/10</string>
    <string name="lb_nav_question_error">0</string>
    <string name="lb_nav_question_max">10</string>
    <string name="lb_nav_question_trouve">0</string>
    <string name="lb_nav_quizz_error">Erreur, Cliquez une nouvelle fois.</string>
    <string name="lb_nav_quizz_message">"MAUVAISE RÉPONSE
La bonne réponse est:"</string>
    <string name="lb_nav_quizz_ok_message">"TRÈS BIEN RÉPONDU
La réponse est effectivement:"</string>
    <string name="lb_nav_quizz_save">"FIN DU QUIZ
Voulez-vous enregistrer ce questionnaire ?"</string>
    <string name="lb_nav_suggest_1">Église de Corinthe</string>
    <string name="lb_nav_suggest_2">Église de Thessalonique</string>
    <string name="lb_nav_suggest_3">Église de la Galatie</string>
    <string name="lb_nav_title">Toute la Bible</string>
    <string name="lb_nav_yes">OUI</string>
    <string name="lb_ok">OK</string>
    <string name="lb_parameter">Paramètres</string>
    <string name="lb_privacy_policy">Politique de confidentialité</string>
    <string name="lb_privacy_policy_url">https://politique-confidentialite.levraievangile.org/qr.php</string>
    <string name="lb_question">Question</string>
    <string name="lb_quizz">QUIZ</string>
    <string name="lb_quizz_end">FIN DU QUIZ Cliquez sur le bouton OUI pour enregistrer ce questionnaire.</string>
    <string name="lb_quizz_end_save">Fin du quiz, il a été enregistré dans les quiz terminés</string>
    <string name="lb_search_media">Rechercher un média</string>
    <string name="lb_share_app">"Partager l'application"</string>
    <string name="lb_youtube_download">Téléchargement Youtube</string>
</resources>