<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/size_5_dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar android:layout_gravity="center" android:id="@id/nav_quizz_progressbar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?android:progressBarStyle" />
    <LinearLayout android:orientation="vertical" android:id="@id/nav_error_layout" android:background="@color/colorRedOpacity75" android:padding="@dimen/size_5_dp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp">
        <TextView android:textSize="@dimen/text_size_18_sp" android:textStyle="bold" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/nav_quizz_error_msg" android:padding="@dimen/size_5_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lb_nav_quizz_message" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="@dimen/text_size_18_sp" android:textColor="@color/colorWhite" android:id="@id/nav_quizz_btn_detail" android:background="@drawable/btn_red" android:padding="@dimen/size_5_dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_explain" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
            <Button android:textSize="@dimen/text_size_18_sp" android:textColor="@color/colorWhite" android:id="@id/nav_quizz_btn_continue" android:background="@drawable/btn_red" android:padding="@dimen/size_5_dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_continuie" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/nav_save_layout" android:background="@color/colorGreenOpacity75" android:padding="@dimen/size_5_dp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp">
        <TextView android:textSize="@dimen/text_size_18_sp" android:textStyle="bold" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/nav_quizz_save_msg" android:padding="@dimen/size_5_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lb_nav_quizz_save" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="@dimen/text_size_18_sp" android:textColor="@color/colorWhite" android:id="@id/nav_quizz_btn_save_no" android:background="@drawable/btn_green" android:padding="@dimen/size_5_dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_no" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
            <Button android:textSize="@dimen/text_size_18_sp" android:textColor="@color/colorWhite" android:id="@id/nav_quizz_btn_save_yes" android:background="@drawable/btn_green" android:padding="@dimen/size_5_dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_yes" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_18_sp" android:textStyle="bold" android:textColor="@color/blueOpacity90" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/nav_quizz_question" android:padding="@dimen/size_10_dp" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_demo_question" />
    <RadioGroup android:id="@id/nav_quizz_choice" android:padding="@dimen/size_5_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_5_dp">
        <RadioButton android:textSize="@dimen/text_size_18_sp" android:textStyle="italic" android:textColor="@color/blueOpacity90" android:layout_gravity="left" android:id="@id/nav_quizz_suggest_1" android:background="@drawable/btn" android:padding="@dimen/size_10_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_suggest_1" />
        <RadioButton android:textSize="@dimen/text_size_18_sp" android:textStyle="italic" android:textColor="@color/blueOpacity90" android:layout_gravity="left" android:id="@id/nav_quizz_suggest_2" android:background="@drawable/btn" android:padding="@dimen/size_10_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_suggest_2" />
        <RadioButton android:textSize="@dimen/text_size_18_sp" android:textStyle="italic" android:textColor="@color/blueOpacity90" android:layout_gravity="left" android:id="@id/nav_quizz_suggest_3" android:background="@drawable/btn" android:padding="@dimen/size_10_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_suggest_3" />
    </RadioGroup>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/size_5_dp">
        <ImageButton android:gravity="center" android:id="@id/nav_quizz_texttospeech" android:background="@drawable/btn_blue" android:layout_width="@dimen/size_65_dp" android:layout_height="@dimen/size_65_dp" android:layout_margin="@dimen/size_10_dp" android:src="@drawable/btn_quizz_texttospeech" android:contentDescription="@string/lb_content_desc" />
        <ImageButton android:gravity="center" android:id="@id/nav_quizz_validate" android:background="@drawable/btn_blue" android:layout_width="@dimen/size_65_dp" android:layout_height="@dimen/size_65_dp" android:layout_margin="@dimen/size_10_dp" android:src="@drawable/btn_quizz_send" android:contentDescription="@string/lb_content_desc" />
    </LinearLayout>
</LinearLayout>