<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/btn_book_summary" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_18_sp" android:textStyle="bold" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/nav_quizz_title" android:background="@color/colorPrimary" android:padding="@dimen/size_10_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_audio_player_title" />
        <ImageButton android:id="@id/nav_quizz_back" android:background="@android:color/transparent" android:padding="@dimen/size_5_dp" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_margin="@dimen/size_10_dp" android:src="@drawable/btn_arrow_back" android:layout_centerVertical="true" android:contentDescription="@string/lb_content_desc" android:layout_alignParentStart="true" />
    </RelativeLayout>
    <include layout="@layout/item_quizz_save_title_ratinbar" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_18_sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="left" android:id="@id/nav_quizz_progress" android:padding="@dimen/size_5_dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_progress" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/text_size_16_sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="right" android:id="@id/nav_quizz_correct" android:padding="@dimen/size_5_dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" android:text="@string/lb_nav_correct" android:layout_weight="3.0" />
    </LinearLayout>
</LinearLayout>