<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@id/main_content" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:fab="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:theme="@style/AppTheme.AppBarOverlay" android:id="@id/appbar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:background="@mipmap/header" android:layout_width="fill_parent" android:layout_height="?actionBarSize" fab:layout_scrollFlags="enterAlways|scroll" fab:popupTheme="@style/AppTheme.PopupOverlay" style="@style/CustomToolbar" />
        <android.support.design.widget.TabLayout android:id="@id/tabs" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/CustomTabLayout" />
    </android.support.design.widget.AppBarLayout>
    <org.questionsreponses.View.ViewPagers.HomeViewPager android:id="@id/viewpagerHome" android:layout_width="fill_parent" android:layout_height="fill_parent" fab:layout_behavior="@string/appbar_scrolling_view_behavior" />
    <LinearLayout android:layout_gravity="end|bottom|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.github.clans.fab.FloatingActionMenu android:layout_gravity="end|bottom|center" android:id="@id/fab_menu" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_1_dp" android:layout_marginBottom="@dimen/size_10_dp" android:layout_marginStart="@dimen/size_1_dp" android:layout_marginEnd="@dimen/size_10_dp" fab:backgroundTint="@color/colorAccentOpacity50" fab:fab_colorNormal="@color/colorAccent" fab:menu_colorNormal="@color/colorAccent" fab:menu_colorPressed="@color/colorAccentOpacity50" fab:menu_colorRipple="@color/colorAccent" fab:menu_labels_colorNormal="@color/colorPrimary" fab:menu_labels_cornerRadius="@dimen/size_3_dp" fab:menu_labels_padding="@dimen/size_10_dp" fab:menu_showShadow="true" fab:rippleColor="@color/colorAccent">
            <com.github.clans.fab.FloatingActionButton android:id="@id/fab_contact_us" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fab_contact_us_32dp" android:onClick="contactUs" fab:fab_colorNormal="@color/colorWhite" fab:fab_colorPressed="@color/colorAccentOpacity50" fab:fab_colorRipple="@color/colorAccent" fab:fab_label="@string/lb_contact_us" fab:fab_size="mini" />
            <com.github.clans.fab.FloatingActionButton android:id="@id/fab_share_app" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fab_share_32dp" android:onClick="shareApp" fab:fab_colorNormal="@color/colorWhite" fab:fab_colorPressed="@color/colorAccentOpacity50" fab:fab_colorRipple="@color/colorAccent" fab:fab_label="@string/lb_share_app" fab:fab_size="mini" />
            <com.github.clans.fab.FloatingActionButton android:id="@id/fab_parameter" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fab_parameter_32dp" android:onClick="parameter" fab:fab_colorNormal="@color/colorWhite" fab:fab_colorPressed="@color/colorAccentOpacity50" fab:fab_colorRipple="@color/colorAccent" fab:fab_label="@string/lb_parameter" fab:fab_size="mini" />
            <com.github.clans.fab.FloatingActionButton android:id="@id/fab_search" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fab_search_32dp" android:onClick="searchMedia" fab:fab_colorNormal="@color/colorWhite" fab:fab_colorPressed="@color/colorAccentOpacity50" fab:fab_colorRipple="@color/colorAccent" fab:fab_label="@string/lb_search_media" fab:fab_size="mini" />
            <com.github.clans.fab.FloatingActionButton android:id="@id/fab_app_update" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_app_update_32dp" android:onClick="updateApplication" fab:fab_colorNormal="@color/colorWhite" fab:fab_colorPressed="@color/colorAccentOpacity50" fab:fab_colorRipple="@color/colorAccent" fab:fab_label="@string/lb_menu_update_app" fab:fab_size="mini" />
            <com.github.clans.fab.FloatingActionButton android:id="@id/fab_youtube_download" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fab_download_32dp" android:onClick="youtubeDownloader" fab:fab_colorNormal="@color/colorWhite" fab:fab_colorPressed="@color/colorAccentOpacity50" fab:fab_colorRipple="@color/colorAccent" fab:fab_label="@string/lb_youtube_download" fab:fab_size="mini" />
            <com.github.clans.fab.FloatingActionButton android:id="@id/fab_privacy_policy" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fab_info_blue_32dp" android:onClick="youtubeDownloader" fab:fab_colorNormal="@color/colorWhite" fab:fab_colorPressed="@color/colorAccentOpacity50" fab:fab_colorRipple="@color/colorAccent" fab:fab_label="@string/lb_privacy_policy" fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>
    </LinearLayout>
    <include android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_5_dp" layout="@layout/audio_player_content" />
</android.support.design.widget.CoordinatorLayout>