<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/form_search" android:background="@color/blueOpacityBg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/layout_contact" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_18_sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center" android:id="@id/text_header_search" android:paddingTop="@dimen/size_10_dp" android:paddingBottom="@dimen/size_10_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lb_form_search_title" />
            <ImageButton android:id="@id/btn_close_search" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_form_close" android:contentDescription="@string/lb_content_desc" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/text_size_15_sp" android:textColor="@color/blueOpacity75" android:gravity="center" android:id="@id/texte_select_indicateur" android:padding="@dimen/size_5_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lb_form_search_select_category" />
        <Spinner android:id="@id/spinner_type_ressource" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dropdown" android:layout_marginStart="@dimen/size_10_dp" android:layout_marginEnd="@dimen/size_10_dp" />
        <TextView android:textSize="@dimen/text_size_15_sp" android:textColor="@color/blueOpacity75" android:gravity="start" android:id="@id/texte_search_indicateur" android:padding="@dimen/size_10_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lb_form_search_indication" android:textAlignment="center" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/size_10_dp">
            <android.support.design.widget.TextInputLayout android:layout_gravity="fill_vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="@dimen/size_5_dp" android:layout_weight="1.0">
                <android.support.design.widget.TextInputEditText android:textSize="18.0sp" android:textColor="@color/colorPrimary" android:textColorHint="@color/blueOpacity75" android:id="@id/edittexte_search" android:padding="@dimen/size_5_dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/lb_form_search_keyword" android:inputType="textCapSentences|textMultiLine" />
            </android.support.design.widget.TextInputLayout>
            <ImageButton android:id="@id/btn_search_validate" android:background="@android:color/transparent" android:layout_width="@dimen/size_65_dp" android:layout_height="@dimen/size_65_dp" android:src="@drawable/btn_form_validate" android:contentDescription="@string/lb_content_desc" android:layout_marginStart="@dimen/size_10_dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>